# Modern-AI-Systems-Engineering-A-Complete-Hands-On-Curriculum

./: .env.example  .gitignore  CONTRIBUTING.md  CURRICULUM.md  LICENSE  Makefile  README.md  RESOURCES.md  SETUP.md  requirements-dev.txt
.github/workflows/: ci.yml
day-00-foundations/: README.md
day-00-foundations/01-python/: examples.py  notes.md
day-00-foundations/02-terminal-git/: git-cheatsheet.sh  notes.md
day-00-foundations/03-ml-fundamentals/: notes.md  tiny_model.py
day-00-foundations/04-apis-http/: call_api.py  mini_server.py  notes.md
day-00-foundations/exercises/: README.md  starter.py
day-01-mlops/: README.md
day-01-mlops/project-01-eta-predictor/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
day-01-mlops/project-01-eta-predictor/app/: main.py  predictor.py  schemas.py
day-01-mlops/project-01-eta-predictor/scripts/: generate_data.py  train.py
day-01-mlops/project-01-eta-predictor/tests/: test_api.py  test_schemas.py
day-01-mlops/project-02-dvc-pipeline/: README.md  dvc.yaml  params.yaml
day-02-rag/: README.md
day-02-rag/project-03-medical-rag/: README.md  requirements.txt
day-02-rag/project-04-product-recommender/: README.md
day-03-finetuning/: README.md
day-03-finetuning/project-05-qlora-finetuner/: README.md  colab.md  config.yaml  inference.py  requirements.txt  train_qlora.py
day-04-agents/: README.md
day-05-multi-agent/: README.md
day-06-langgraph/: README.md
day-07-eval-guardrails/: README.md
day-08-production/: README.md
day-09-capstone/: README.md
docs/: README.md
(+107 files in other folders)
