[tool.poetry]
name = "eta-predictor"
version = "1.0.0"
description = "Containerised ETA predictor with MLflow tracking"
authors = ["ransjnr"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.30"
pydantic = "^2.7"
scikit-learn = "^1.5"
pandas = "^2.2"
numpy = "^1.26"
joblib = "^1.4"
mlflow = "^2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
